<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgr" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

             <CheckBox
                 android:id="@+id/checkbox_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:text="@string/add_passwrod"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#5cb65e"
                 android:textSize="25sp" />
             
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/change_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#5cb65e"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/new_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_newPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword">
                <requestFocus />
                
                </EditText>

            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/confirm_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editText_confirmNewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword" />
            
            
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/change_currency"
                android:textColor="#5cb65e"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_currency"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"/>
            
            
            <Button
                android:id="@+id/settings_save_changes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/confirm_changes"
                android:textSize="18sp" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>