<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="@drawable/backgr">
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:layout_gravity="center"
         android:textColor="#c9c9c9"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <EditText
         android:id="@+id/editText_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ems="10"
         android:inputType="textPassword">
         
          <requestFocus android:layout_width="wrap_content" />
         
     </EditText>
         
     
     <LinearLayout
         android:layout_width="200sp"
         android:layout_height="50sp"
         android:orientation="horizontal"
         android:padding="10dp"
         android:layout_gravity="center">

        <Button
            android:id="@+id/confirm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="5"
            android:background="@drawable/button"
            android:text="@string/login_text" />
        
        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_weight="5"
            android:background="@drawable/button"
            android:text="@string/cancel" />

 	</LinearLayout>
</LinearLayout>