<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgr" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
             <Spinner
                 android:id="@+id/spinner_operations"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_gravity="center"
                 android:drawSelectorOnTop="true"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/amount_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="35" 
                >
                <requestFocus />
                
                </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/change_currency"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_optional_currency"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/date_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9" />

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="50"
                android:layout_gravity="center"
                android:focusable="false"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/remarks"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#c9c9c9"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_remarks"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:maxLength="50"/>
            
            <Button
                android:id="@+id/add_operation"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/add_operation"
                android:textSize="18sp" 
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>