<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgr" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/new_category_expence"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#5cb65e"
                android:textSize="25sp" />
            
            <EditText
                android:id="@+id/editText_newCategoryExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLength="50"
                android:ems="10"/>
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/new_category_revenue"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#5cb65e"
                android:textSize="25sp" />
            
            <EditText
                android:id="@+id/editText_newCategoryRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLength="50"
                android:ems="10"/>
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/new_currency"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#5cb65e"
                android:textSize="25sp" />
            
            <EditText
                android:id="@+id/editText_newCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLength="50"
                android:ems="10"/>
            
            <Button
                android:id="@+id/save_changes"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/confirm_changes"
                android:textSize="18sp" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>